require-label.yaml
---
metadata:
  name: "require-labels"
  annotations:
    policies.kyverno.io/category: "Best Practices"
    policies.kyverno.io/description: "Kubernetes recommends a set of standard labels\
      \ for applications.  See https://kubernetes.io/docs/concepts/overview/working-with-objects/common-labels/"
apiVersion: "kyverno.io/v1"
kind: "ClusterPolicy"
spec:
  validationFailureAction: "audit"
  rules:
  - match:
      resources:
        kinds:
        - "Pod"
    name: "check-for-labels"
    validate:
      pattern:
        metadata:
          labels:
            app.kubernetes.io/name: "?*"
            app.kubernetes.io/instance: "?*"
      message: "The labels `app.kubernetes.io/name` and `app.kubernetes.io/instance`\
        \ are recommended."
